--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,7 @@
 name: Simple Commands
 on: [push]
 jobs: 
- runs-shell-commnad:
+ runs-shell-command:
   runs-on: ubuntu-latest
   steps:
    - name: echo a string
@@ -17,6 +17,7 @@ jobs:
      shell: python
  run-windows-command:
   runs-on: windows-latest
+  needs: [runs-shell-command] 
   steps: 
    - name: Directory PowerShell
      run: Get-Location
