--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -5,6 +5,16 @@ jobs:
  run-github-actions:
   runs-on: ubuntu-latest
   steps:
+   - name: List files 
+     run: | 
+      pwd
+      ls
+   - name: Checkout
+     uses: actions/checkout@v3
+   - name: List files 
+     run: | 
+      pwd
+      ls -a 
    - name: Simple JS Action
      id: greet
      uses: actions/hello-world-javascript-action@v1
