--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,5 +1,9 @@
 name: Actions
-on: [push, pull_request]
+on:
+ push:
+ pull_request:
+  types: [closed, assigned, opened, reopened]
+  
 
 jobs:
  run-github-actions:
